<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fillingmenulayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headinglayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/fillingmenuheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:text="@string/filling_menu_heading_text"
            android:textAllCaps="true"
            android:textColor="@color/purple_500"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/sastaamart_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/sastaamart_logo"
            android:foregroundTint="@color/purple_500"
            app:srcCompat="@drawable/ic_sastaamart_logo"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/AddNewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/add_new_product"
            tools:ignore="SpeakableTextPresentCheck">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Add_RefillProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:text="@string/Add_Refill_Product"
            tools:ignore="SpeakableTextPresentCheck">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/CurrentMachineStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:text="@string/CurrentMachineStatus"
            tools:ignore="SpeakableTextPresentCheck">

        </com.google.android.material.button.MaterialButton>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/completelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/labellayout"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/productIDLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="5dp"
                android:text="@string/product_search_text"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="5dp"
                android:text="@string/hint_qty"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/SelectColumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:padding="5dp"
                android:text="@string/spinner_Col_text"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/SelectRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="5dp"
                android:text="@string/spinner_Row_text"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout
            android:id="@+id/productlayout"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minWidth="400dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="60dp"
                    android:minHeight="60dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--<EditText
                android:id="@+id/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/hint_qty"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />-->
            <Spinner
                android:id="@+id/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#2C292A2B"
                android:backgroundTint="#333737"
                android:dropDownSelector="@android:drawable/arrow_down_float"
                android:focusableInTouchMode="true"
                android:foregroundTint="#DC9393"
                android:minWidth="200dp"
                android:minHeight="80dp"
                android:prompt="@string/spinner_qty_prompt_text"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/selectcolumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#2C292A2B"
                android:backgroundTint="#333737"
                android:dropDownSelector="@android:drawable/arrow_down_float"
                android:focusableInTouchMode="true"
                android:foregroundTint="#DC9393"
                android:minWidth="200dp"
                android:minHeight="80dp"
                android:prompt="@string/spinner_Col_text"
                android:spinnerMode="dialog"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/selectrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#2C292A2B"
                android:backgroundTint="#333737"
                android:dropDownSelector="@android:drawable/arrow_down_float"
                android:focusableInTouchMode="true"
                android:foregroundTint="#DC9393"
                android:minWidth="200dp"
                android:minHeight="80dp"
                android:prompt="@string/spinner_Row_text"
                android:spinnerMode="dialog"
                tools:ignore="SpeakableTextPresentCheck" />



        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="10dp"
            android:text="@string/done"
            android:visibility="visible"
            tools:ignore="SpeakableTextPresentCheck">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/reset"
            android:visibility="visible"
            app:backgroundTint="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</LinearLayout>