<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_01">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:context=".MainScreenActivity">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appmainbutton"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="300dp"
                android:text="@string/main_button"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

            </com.google.android.material.button.MaterialButton>

            <TextView
                android:id="@+id/myText"
                android:layout_width="495dp"
                android:layout_height="45dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="120dp"
                android:text="@string/mainscreenname"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toStartOf="@+id/fillmenubutton"
                app:layout_constraintStart_toEndOf="@+id/exitbutton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fillmenubutton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/fill_menu_button"
                android:textColor="#000000"
                android:visibility="invisible"
                app:backgroundTint="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.968"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TextContrastCheck">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exitbutton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/exit_button"
                android:textColor="#000000"
                android:visibility="invisible"
                app:backgroundTint="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TextContrastCheck">

            </com.google.android.material.button.MaterialButton>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>